--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ function filterList() {
     businessCount.textContent = `Total Businesses: ${data.length}`;
 
     data.forEach(item => {
-      const link = `https://gadhinglaj.bizc.in/${item.profileID}`;
+      const link = `https://mahagaon.bizc.in/${item.profileID}`;
       const imageSrc = item.image1 ? item.image1 : 'default.jpg';
 
       businessList.innerHTML += `
@@ -307,3 +307,4 @@ function filterList() {
 
 </body>
 </html>
+
